[gd_scene load_steps=7 format=3 uid="uid://bv7fuaoc2kwq3"]

[ext_resource type="PackedScene" uid="uid://bot7rbc830g06" path="res://editor/controls/dockers/workspace_docker.tscn" id="1_4tixe"]
[ext_resource type="Script" path="res://editor/controls/dockers/workspace_docker/object_tree_docker.gd" id="1_56vuh"]
[ext_resource type="Texture2D" uid="uid://rd2bfyibhxsq" path="res://editor/controls/dockers/workspace_docker/icons/icon_sort.svg" id="2_uph6r"]
[ext_resource type="Texture2D" uid="uid://bbs12w5lvns5j" path="res://editor/controls/dockers/workspace_docker/icons/icon_filter.svg" id="2_w3cu3"]
[ext_resource type="Texture2D" uid="uid://bmubyere46xyj" path="res://editor/controls/dockers/workspace_docker/icons/icon_focus.svg" id="4_r65e6"]
[ext_resource type="PackedScene" uid="uid://d1ieb50lpntfu" path="res://editor/controls/dockers/workspace_docker/popup_object_tree_view/popup_object_tree_view.tscn" id="5_1b78w"]

[node name="WorkspaceDocker" instance=ExtResource("1_4tixe")]
script = ExtResource("1_56vuh")
docker_tab_title = "Object Tree"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CategoryContainer" index="0"]
layout_mode = 2

[node name="MenuButtonFilterBy" type="MenuButton" parent="ScrollContainer/CategoryContainer/HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"
icon = ExtResource("2_w3cu3")
flat = false
item_count = 4
popup/item_0/text = "Any"
popup/item_0/checkable = 2
popup/item_0/id = 0
popup/item_1/text = "Name"
popup/item_1/checkable = 2
popup/item_1/checked = true
popup/item_1/id = 1
popup/item_2/text = "ID"
popup/item_2/checkable = 2
popup/item_2/id = 2
popup/item_3/text = "Type"
popup/item_3/checkable = 2
popup/item_3/id = 3

[node name="LineEditFilter" type="LineEdit" parent="ScrollContainer/CategoryContainer/HBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Filter"

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/CategoryContainer/HBoxContainer" index="2"]
layout_mode = 2

[node name="MenuButtonSort" type="MenuButton" parent="ScrollContainer/CategoryContainer/HBoxContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
text = "Sort"
icon = ExtResource("2_uph6r")
item_count = 6
popup/item_0/text = "By Creation Order"
popup/item_0/checkable = 2
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "By Name Asc"
popup/item_1/checkable = 2
popup/item_1/id = 1
popup/item_2/text = "By Name Desc"
popup/item_2/checkable = 2
popup/item_2/id = 2
popup/item_3/text = "By ID Asc"
popup/item_3/checkable = 2
popup/item_3/id = 3
popup/item_4/text = "By ID Dec"
popup/item_4/checkable = 2
popup/item_4/id = 4
popup/item_5/text = "Group By Type"
popup/item_5/checkable = 1
popup/item_5/id = 5
popup/item_5/disabled = true

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/CategoryContainer/HBoxContainer" index="4"]
layout_mode = 2

[node name="ButtonFocusSelection" type="Button" parent="ScrollContainer/CategoryContainer/HBoxContainer" index="5"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Focus camera on selection"
focus_mode = 0
icon = ExtResource("4_r65e6")
flat = true

[node name="ObjectsTree" type="Tree" parent="ScrollContainer/CategoryContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
allow_rmb_select = true
select_mode = 2
scroll_horizontal_enabled = false

[node name="PopupObjectTreeView" parent="." index="1" instance=ExtResource("5_1b78w")]
unique_name_in_owner = true
visible = false
